Mostrar dados no dialog

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -51,6 +51,22 @@
     <td mat-cell *matCellDef="let element">{{ element.power }}</td>
   </ng-container>
 
+  <!-- Action Column -->
+  <ng-container matColumnDef="acao">
+    <th mat-header-cell *matHeaderCellDef>Ação</th>
+    <td mat-cell *matCellDef="let element">
+      <button
+        mat-mini-fab
+        matTooltip="Primary"
+        color="primary"
+        aria-label="Exemplo de mini fab com coração icon"
+        (click)="openDialog(element)"
+      >
+        <mat-icon mat-icon>info</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
   <tr mat-row *matRowDef="let element; columns: columnsToDisplay"></tr>
 
@@ -121,6 +137,7 @@
 <!-- @for (card of cards.cards; track cards.id) {
 {{ card.id }} <br />
 {{ card.name }}<br />
+<img [src]="card.imageUrl" alt="{{ card.name }}" /><br />
 {{ card.artist }}<br />
 {{ card.manaCost }}<br />
 <br />
