--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -26,63 +26,40 @@
   <p>Selected food: {{ selectedValue }}</p>
 </form>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
-  <!-- Position Column -->
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef>ID</th>
-    <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-  </ng-container>
+<!-- <div *ngFor="let setCard of setCards">
+  <p>Retorno === {{ setCard.name }}</p>
+</div> -->
 
-  <!-- Name Column -->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Name</th>
-    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-  </ng-container>
+<div>
+  <!-- <div class="example-action-buttons">
+    <button mat-button (click)="accordion.openAll()">Expand All</button>
+    <button mat-button (click)="accordion.closeAll()">Collapse All</button>
+  </div> -->
+  <mat-accordion class="linked-headers-align" multi>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title> Coleção </mat-panel-title>
+        <mat-panel-description>
+          Type your name and age
+          <mat-icon>account_circle</mat-icon>
+        </mat-panel-description>
+      </mat-expansion-panel-header>
 
-  <!-- Weight Column -->
-  <ng-container matColumnDef="manaCost">
-    <th mat-header-cell *matHeaderCellDef>ManaCost</th>
-    <td mat-cell *matCellDef="let element">{{ element.manaCost }}</td>
-  </ng-container>
-
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="power">
-    <th mat-header-cell *matHeaderCellDef>Power</th>
-    <td mat-cell *matCellDef="let element">{{ element.power }}</td>
-  </ng-container>
-
-  <!-- Action Column -->
-  <ng-container matColumnDef="acao">
-    <th mat-header-cell *matHeaderCellDef>Ação</th>
-    <td mat-cell *matCellDef="let element">
-      <button
-        mat-mini-fab
-        matTooltip="Primary"
-        color="primary"
-        aria-label="Exemplo de mini fab com coração icon"
-        (click)="openDialog(element)"
-      >
-        <mat-icon mat-icon>info</mat-icon>
-      </button>
-    </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-  <tr mat-row *matRowDef="let element; columns: columnsToDisplay"></tr>
-
-  <!-- Row shown when there is no matching data. -->
-  <tr class="mat-row" *matNoDataRow>
-    <td class="mat-cell" colspan="4">
-      <!-- No data matching the filter "{{ input.value }}" -->
-      No data matching the filter
-    </td>
-  </tr>
-</table>
-
-<mat-paginator
-  [pageSizeOptions]="[5, 10, 25, 100]"
-  aria-label="Select page of users"
-></mat-paginator>
+      @for (setCard of setCards.sets; track setCards.code){
+      <mat-card class="linked-card">
+        <mat-card-header>
+          <mat-card-title>{{ setCard.name }}</mat-card-title>
+          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+          <p>This card indeterminates progress bar.</p>
+          <p>longText</p>
+        </mat-card-content>
+      </mat-card>
+      }
+    </mat-expansion-panel>
+  </mat-accordion>
+</div>
 
 <br />
 <br />
@@ -134,7 +111,7 @@
   </tr>
 </table> -->
 
-<!-- @for (card of cards.cards; track cards.id) {
+<!-- @for (card of listCards.cards; track listCards.id) {
 {{ card.id }} <br />
 {{ card.name }}<br />
 <img [src]="card.imageUrl" alt="{{ card.name }}" /><br />
