--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -1,30 +1,106 @@
-.linked-container:after,.linked-container:before,.linked-panel:after,.linked-panel:before,.linked-row:after,.linked-row:before,.linked-row-padding:after,.linked-row-padding:before, .linked-cell-row:before,.linked-cell-row:after,.linked-clear:after,.linked-clear:before,.linked-bar:before,.linked-bar:after{
-  content:"";
-  display:table;
-  clear:both
+.linked-container{
+  padding:20px;
 }
-.linked-input{
-  padding:8px;
-  display:block;
-  border:none;
-  border-bottom:1px solid #ccc;
-  width:100%
-}
+// .linked-container:after,.linked-container:before,.linked-panel:after,.linked-panel:before,.linked-row:after,.linked-row:before,.linked-row-padding:after,.linked-row-padding:before, .linked-cell-row:before,.linked-cell-row:after,.linked-clear:after,.linked-clear:before,.linked-bar:before,.linked-bar:after{
+//   content:"";
+//   display:table;
+//   clear:both
+// }
+// .linked-input{
+//   padding:8px;
+//   display:block;
+//   border:none;
+//   border-bottom:1px solid #ccc;
+//   width:100%
+// }
 
 //Expansion Panel
-.linked-action-buttons {
-  padding-bottom: 20px;
+.mat-expansion-panel {
+  width: 100%;
+}
+.panel-body {
+    display: flex;
+    gap: 26px;
+    justify-content: flex-start;
+    flex-wrap: wrap;
 }
 
-.linked-headers-align .mat-expansion-panel-header-description {
-  justify-content: space-between;
-  align-items: center;
-}
+// .linked-action-buttons {
+//   padding-bottom: 20px;
+// }
 
-.linked-headers-align .mat-mdc-form-field + .mat-mdc-form-field {
-  margin-left: 8px;
-}
+// .linked-headers-align .mat-expansion-panel-header-description {
+//   justify-content: space-between;
+//   align-items: center;
+// }
 
+// .linked-headers-align .mat-mdc-form-field + .mat-mdc-form-field {
+//   margin-left: 8px;
+// }
+.spinner {
+  display: flex;
+  justify-content: center;
+}
 .linked-card {
-  max-width: 400px;
+  width: 317px;
+  height: 165px;
+  mat-card-content{
+    margin-top: 20px;
+  }
+}
+
+.example-card{
+  width: 330px;
+  height: 300px;
+}
+.card-creature{
+  display: flex;
+  // justify-content: space-between;
+  gap: 10px;
+  &-info {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    &__text {
+      height: 187px;
+      overflow-y: overlay;
+    }
+  }
+  &-card {
+    display: flex;
+    flex-grow: 1;
+    img {
+      height: 170px;
+    }
+  }
+}
+
+@media only screen and (max-width: 455px) {
+  .example-card{
+    width: 330px;
+    height: 450px;
+  }
+  .card-creature{
+    display: flex;
+    // justify-content: space-between;
+    gap: 10px;
+    flex-direction: column;
+    &-info {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      order: 1;
+      &__text {
+        height: 187px;
+        overflow-y: overlay;
+      }
+    }
+    &-card {
+      display: flex;
+      flex-grow: 1;
+      img {
+        height: 170px;
+      }
+    }
+  }
 }
