--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -53,7 +53,7 @@
                 </mat-card-content>
                 <mat-card-actions>
                   <button mat-button (click)="callSetCreature()" #trigger2>
-                    LIKE
+                    Booster
                   </button>
                 </mat-card-actions>
               </mat-card>
